adicionei um paragrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,7 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus cupiditate consequatur autem nulla error maxime iusto, dolores obcaecati qui, facilis voluptatem ut delectus aliquam ratione ipsa excepturi culpa earum impedit!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus cupiditate consequatur autem nulla error maxime iusto, dolores obcaecati qui, facilis voluptatem ut delectus aliquam ratione ipsa excepturi culpa earum impedit!</p>
+
 </body>
 </html>
